<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/appPickerRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppPickerActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingHorizontal="@dimen/screen_content_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="@dimen/screen_content_max_width">

        <TextView
            android:id="@+id/appPickerTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/app_picker_title"
            android:textColor="@color/screen_text_primary"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/applicationSearchInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:autofillHints=""
            android:hint="@string/app_picker_search_hint"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:minHeight="@dimen/action_button_min_height"
            android:textColor="@color/screen_text_primary"
            android:textColorHint="@color/screen_text_secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appPickerTitle" />

        <ListView
            android:id="@+id/applicationsList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/spacing_small"
            android:clipToPadding="false"
            android:divider="@color/app_list_divider"
            android:dividerHeight="@dimen/app_list_divider_height"
            android:paddingBottom="@dimen/spacing_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/applicationSearchInput" />

        <TextView
            android:id="@+id/emptyApplicationsText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/app_picker_empty"
            android:textColor="@color/screen_text_secondary"
            android:textSize="@dimen/text_size_body"
            app:layout_constraintBottom_toBottomOf="@id/applicationsList"
            app:layout_constraintEnd_toEndOf="@id/applicationsList"
            app:layout_constraintStart_toStartOf="@id/applicationsList"
            app:layout_constraintTop_toTopOf="@id/applicationsList" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
